Use Collections.emptyMap() instead of Map.of()
Need to remember that LSP4J is still at Java 8